# Telco-Customer-Churn

./: README.md  business_recommendations.py  business_recommendations_fixed.py  eda.py  main.py  model_training.py  pyproject.toml  requirements.txt  run_eda.py
